<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="295dp"
            android:layout_height="45dp"
            android:entries="@array/Boissons"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/button_drink_plus"
            android:layout_width="115dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:text="+"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="S" />


            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="M" />


            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="L" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vanilla" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chantilly" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/milk" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_total"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/colorBlack"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/text_view_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorBlack"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_order"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/order"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button_cancel"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/cancel"
            android:textSize="25dp" />


    </LinearLayout>

</LinearLayout>
